fix schedules page overflow

--- a/includes/templates/css/schedules.css
+++ b/includes/templates/css/schedules.css
@@ -21,7 +21,7 @@
 
 .schedules_container {
     width: 95%;
-    height: 100%;
+    height: 80%;
     display: flex;
 }
 
